--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "commitizen-test",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "How commitizen works?",
   "main": "index.js",
   "repository": "git@github.com:macalex/commitizen-test.git",
-  "author": "Alex Székely <mail.szekelyalex@gmail.com>",
+  "author": "Alex Sz\u00e9kely <mail.szekelyalex@gmail.com>",
   "license": "MIT"
 }
